Added environment constants for front-end Updated back-end
