# laravel.spu123.com/app/Http/Controllers/CategoryController.php
@@ -8,6 +8,7 @@ use Illuminate\Contracts\Support\Jsonable;
 use Illuminate\Http\Request;
 use mysql_xdevapi\Exception;
 use Nette\Schema\ValidationException;
+use Validator;
 
 class CategoryController extends Controller
 {
@@ -51,16 +52,143 @@ class CategoryController extends Controller
      *     @OA\Response(response="201", description="Added a new category")
      * )
      */
-    public function create(Request $request): \Illuminate\Http\JsonResponse
-    {
-        try {
-            $input = $this->getValidatedData($request, $this->categoryRules);
+    public function create(Request $request) {
+        $input = $request->all();
+        $message = [
+            'name.required'=>'Вкажіть назву категорії',
+            'image.required'=>'Вкажіть фото категорії',
+            'description.required'=>'Вкажіть опис категорії'
+        ];
+        $validation = Validator::make($input,[
+            'name'=>'required',
+            'image'=>'required',
+            'description'=>'required',
+        ],$message);
+        if($validation->fails()){
+            return $this->jsonresponse($validation->errors(), 400);
+        }
 
-            $category = Category::create($input);
-            return $this->jsonresponse($input, 201);
+        $category = Category::create($input);
+        return $this->jsonresponse($category, 201);
+    }
+
+    /**
+     * @OA\Get(
+     *     tags={"Category"},
+     *     path="/api/categories/{id}",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="Ідентифікатор категорії",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="number",
+     *             format="int64"
+     *         )
+     *     ),
+     *     @OA\Response(response="200", description="List Categories."),
+     * @OA\Response(
+     *    response=404,
+     *    description="Wrong id",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Sorry, wrong Category Id has been sent. Pls try another one.")
+     *        )
+     *     )
+     * )
+     */
+    public function getById($id) {
+        $category = Category::findOrFail($id);
+        return $this->jsonresponse($category);
+    }
+
+    /**
+     * @OA\Post(
+     *     tags={"Category"},
+     *     path="/api/categories/edit/{id}",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="Ідентифікатор категорії",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="number",
+     *             format="int64"
+     *         )
+     *     ),
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 required={"name"},
+     *                 @OA\Property(
+     *                     property="image",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="name",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="description",
+     *                     type="string"
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(response="200", description="Edited Category")
+     * )
+     */
+    public function put($id, Request $request) {
+        $category = Category::findOrFail($id);
+        $input = $request->all();
+        $message = [
+            'name.required'=>'Вкажіть назву категорії',
+            'image.required'=>'Вкажіть фото категорії',
+            'description.required'=>'Вкажіть опис категорії'
+        ];
+        $validation = Validator::make($input,[
+            'name'=>'required',
+            'image'=>'required',
+            'description'=>'required',
+        ],$message);
+        if($validation->fails()){
+            return $this->jsonresponse($validation->errors(), 400);
         }
-        catch (Exception $e) {
-            return $this->jsonresponse(["StatusCode" => 400, "Message" => "Invalid data. Fill in all fields"], 400);
-        }
+        $category->update($input);
+        return $this->jsonresponse($category);
+    }
+
+    /**
+     * @OA\Delete(
+     *     path="/api/categories/{id}",
+     *     tags={"Category"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="Ідентифікатор категорії",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="number",
+     *             format="int64"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Успішне видалення категорії"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Категорії не знайдено"
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Не авторизований"
+     *     )
+     * )
+     */
+    public function delete($id) {
+        $category = Category::findOrFail($id);
+        $category->delete();
+        return $this->jsonresponse("Ok");
     }
 }
